--- a/index.html
+++ b/index.html
@@ -531,9 +531,9 @@
                 <textarea class="form-control" name="Message" rows="5" placeholder="Message" required></textarea>
               </div>
               <div class="my-3">
-                <div class="loading">Loading</div>
-                <!-- <div class="error-message"></div> -->
-                <div class="sent-message">Your message has been sent. Thank you!</div>
+                <!-- <div id="msg">Loading</div>
+                <div class="error-message"></div> -->
+                <div id="msg" style="background-color: rgb(13, 255, 0);"></div>
               </div>
               <div class="text-center"><button type="submit">Send Message</button></div>
             </form>
