--- a/index.html
+++ b/index.html
@@ -218,10 +218,16 @@
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
+              <h4>MASTERS IN COMPUTER SCIENCE (DATA SCIENCE)</h4>
+              <h5>2024 - 2026</h5>
+              <p><em>Kennesaw State University.Atlanta</em></p>
+              <p>Currently pursuing my Masters degree in Computer Science and Engineering Data Science Specialization at Kennesaw State University,Atlanta USA.</p>
+            </div>
+            <div class="resume-item">
               <h4>B. TECH IN COMPUTER SCIENCE AND ENGINEERING</h4>
               <h5>2020 - 2024</h5>
               <p><em>Vignan's Foundation of Science, Technology and Research (VFSTR).vadlamudi</em></p>
-              <p>Currently pursuing a B.Tech degree in Computer Science and Engineering at Vignan's Foundation of Science, Technology and Research (VFSTR), vadlamudi Guntur.</p>
+              <p>Successfully completed my B.Tech degree in Computer Science and Engineering at Vignan's Foundation of Science, Technology and Research (VFSTR), vadlamudi Guntur with CGPA of 9.01.</p>
             </div>
             <div class="resume-item">
               <h4>INTERMEDIATE</h4>
